--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">inapp_billing_java_5.0</string>
+    <string name="app_name">IAB 5.0</string>
 </resources>
